# ChangeLog for dev-python/docutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.93 2009/09/12 21:20:39 arfrever Exp $

  12 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/50docutils-gentoo.el, -docutils-0.3.7.ebuild,
  -docutils-0.4-r2.ebuild, -docutils-0.4-r3.ebuild,
  -files/docutils-0.4-python-2.5-fix.patch:
  Delete older ebuilds.

  06 Sep 2009; Christian Ruppert <idl0r@gentoo.org>
  -files/50docutils-0.4-gentoo.el:
  Remove unused patch.

*docutils-0.5-r1 (12 Aug 2009)

  12 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +docutils-0.5-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  09 Aug 2009; nixnut <nixnut@gentoo.org> docutils-0.5.ebuild:
  ppc stable #278285

  02 Aug 2009; Raúl Porcel <armin76@gentoo.org> docutils-0.5.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #278285

  26 Jul 2009; Brent Baude <ranger@gentoo.org> docutils-0.5.ebuild:
  stable ppc64, bug 278285

  25 Jul 2009; Jeremy Olexa <darkside@gentoo.org> docutils-0.5.ebuild:
  amd64 stable, bug 278285

  24 Jul 2009; Christian Faulhammer <fauli@gentoo.org> docutils-0.5.ebuild:
  stable x86, bug 278285

  23 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  docutils-0.5.ebuild,
  +files/docutils-0.5-test_node_class_names-python-2.6.patch:
  Fix test_node_class_names with Python 2.6.

  20 Jul 2009; Jeroen Roovers <jer@gentoo.org> docutils-0.5.ebuild:
  Stable for HPPA (bug #278285).

*docutils-0.5 (14 Aug 2008)

  14 Aug 2008; Ali Polatel <hawking@gentoo.org> +docutils-0.5.ebuild:
  Version bump.

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  18 Jul 2008; Alexis Ballier <aballier@gentoo.org> docutils-0.4-r3.ebuild:
  keyword ~sparc-fbsd

  29 Jun 2008; Torsten Veller <tove@gentoo.org> docutils-0.3.7.ebuild,
  docutils-0.4-r2.ebuild, docutils-0.4-r3.ebuild: