@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/Attic/docutils-0.5-r1.ebuild,v 1.1 2009/08/12 01:17:09 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/Attic/docutils-0.5-r1.ebuild,v 1.2 2009/09/20 19:01:24 ulm Exp $
 
 EAPI="2"
 
@@ -22,7 +22,7 @@ IUSE="glep emacs"
 DEPEND="dev-python/setuptools"
 RDEPEND=""
 # Emacs support is in PDEPEND to avoid a dependency cycle (bug #183242)
-PDEPEND="emacs? ( >=app-emacs/rst-0.4 )"
+PDEPEND="emacs? ( || ( >=app-emacs/rst-0.4 >=virtual/emacs-23 ) )"
 
 RESTRICT_PYTHON_ABIS="3*"
 
