@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/Attic/docutils-0.5.ebuild,v 1.9 2009/08/12 00:50:00 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/Attic/docutils-0.5.ebuild,v 1.10 2009/09/20 19:01:24 ulm Exp $
 
 EAPI="2"
 
@@ -20,7 +20,7 @@ IUSE="glep emacs"
 
 DEPEND="dev-python/setuptools"
 # Emacs support is in PDEPEND to avoid a dependency cycle (bug #183242)
-PDEPEND="emacs? ( >=app-emacs/rst-0.4 )"
+PDEPEND="emacs? ( || ( >=app-emacs/rst-0.4 >=virtual/emacs-23 ) )"
 
 EMP=${PN}-0.3.7
 
